--- a/product-detail.html
+++ b/product-detail.html
@@ -160,7 +160,7 @@ menuToggle.addEventListener("click", () => {
             <a href="#" class="text-neutral-40 ">精油薰香</a>
           </li>
           <li class="breadcrumb-item">
-            <a href="product-detail.html" class="text-primary-dark"
+            <a href="product-detail.html" class="text-p-dark"
               >「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感</a
             >
           </li>
@@ -197,14 +197,14 @@ menuToggle.addEventListener("click", () => {
             <h1 class="h2 mb-20 py-8 border-b-neutral-20">
               「森呼吸」純植薰香精油瓶｜沉靜森調Ｘ居家療癒感
             </h1>
-            <p class="h5 mb-40">NT$599</p>
-            <p class="text-neutral-60">三種天然精油配方，無添加</p>
-            <ul class="text-neutral-60">
+            <p class="h4 mb-40 text-n-80">NT$599</p>
+            <p class="text-n-60">三種天然精油配方，無添加</p>
+            <ul class="text-n-60">
               <li>·檜木：穩定情緒，帶來大地木質調</li>
               <li>·尤加利：淨化空氣，提神不刺鼻</li>
               <li>·佛手柑：柔和果香，增加空間溫度感</li>
             </ul>
-            <p class="mb-12 text-neutral-60">
+            <p class="mb-12 text-n-60">
               100% 純天然植物萃取、無酒精、無香精、不刺激寵物與孩童。
             </p>
           </div>
@@ -248,7 +248,7 @@ menuToggle.addEventListener("click", () => {
             </button>
             <button
               type="button"
-              class="btn-outline-pdark text-primary-dark flex-grow-1"
+              class="btn-outline-pdark text-p-dark flex-grow-1"
             >
               加入收藏<i class="bi bi-heart ms-2"></i>
             </button>
@@ -305,11 +305,11 @@ menuToggle.addEventListener("click", () => {
         <div class="col-lg-7 col-md-4">
           <ul>
             <li class="mb-40 product-info-item">
-              <p class="text-primary-100">＃一開門就想到的味道</p>
+              <p class="text-p-100">＃一開門就想到的味道</p>
               <h4 class="py-3 product-info-title">
                 你有多久，沒有好好深呼吸？
               </h4>
-              <p class="text-neutral-60">
+              <p class="text-n-60">
                 「森呼吸」將檜木、尤加利與佛手柑融合，喚醒空氣中那份大自然的清新。<br />
                 只需數滴，即可轉換整個空間的氛圍，讓你瞬間沉靜下來。
               </p>
@@ -325,7 +325,7 @@ menuToggle.addEventListener("click", () => {
               <h4 class="py-3 product-info-title">
                 🏡 居家儀式感，從味道開始
               </h4>
-              <p class="text-neutral-60">
+              <p class="text-n-60">
                 無論是早晨醒來、下班放鬆、或是睡前閱讀時，點上擴香石或水氧機，讓你的日常多一點「森林感」。
               </p>
             </li>
@@ -338,13 +338,13 @@ menuToggle.addEventListener("click", () => {
             </li>
             <li class="mb-40 product-info-item">
               <h4 class="py-3 product-info-title">內含配方</h4>
-              <p class="text-neutral-60">三種無添加的天然精油：</p>
-              <ul class="text-neutral-60 ps-3">
+              <p class="text-n-60">三種無添加的天然精油：</p>
+              <ul class="text-n-60 ps-3">
                 <li>· 檜木：穩定情緒，帶來大地木質調</li>
                 <li>· 尤加利：淨化空氣，提神不刺鼻</li>
                 <li>· 佛手柑：柔和果香，增加空間溫度感</li>
               </ul>
-              <p class="text-neutral-60">
+              <p class="text-n-60">
                 100% 純天然植物萃取、無酒精、無香精、不刺激寵物與孩童。
               </p>
             </li>
@@ -352,9 +352,9 @@ menuToggle.addEventListener("click", () => {
         </div>
         <div class="col-5 col-md-4">
           <div class="capacity-bg p-24 mb-md-32">
-            <h3 class="h5 mb-16">規格說明（範例）</h3>
+            <h3 class="h5 mb-16 text-n-80">規格說明（範例）</h3>
             <div class="border-b-neutral-40 mb-16"></div>
-            <ul class="text-primary-dark">
+            <ul class="text-p-dark">
               <li class="mb-16">
                 容量：<span class="bold">10ml / 20ml 滴瓶裝</span>
               </li>
