--- a/product-detail.html
+++ b/product-detail.html
@@ -230,7 +230,7 @@ menuToggle.addEventListener("click", () => {
           <div class="d-flex mb-32 fdc-md">
             <button
               type="button"
-              class="btn-pdark me-24 mb-md-16 flex-grow-1"
+              class="btn-pdark me-24 me-md-3 mb-md-16 flex-grow-1"
             >
               加入購物車<svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -279,7 +279,10 @@ menuToggle.addEventListener("click", () => {
         <li class="tab-item">
           <a href="#">
             <label for="tab2">顧客評價</label>
-            <i class="bi bi-chat-left-text vertical-middle ml-12"></i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-left-text" viewBox="0 0 16 16">
+  <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+  <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6m0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/>
+</svg>
           </a>
         </li>
         <li class="tab-item">
